[build-system]
# Specify the build backend and dependencies for building the package
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# --- Project Metadata ---
name = "yt-parallel"
version = "1.0.1"
description = "Downloads and processes parallel YouTube subtitles with eSpeak IPA generation."
readme = "README.md" # Assuming you'll write a README
authors = [
    {name = "@readwithai", email = "talwrii@gmail.com"} # IMPORTANT: Replace with your details
]
license = {file = "MIT"} # Assuming you'll choose a license

# List Python dependencies.
dependencies = [
    # No standard PyPI dependencies beyond the built-in ones
]

# Optional: Define your project's homepage, repository, etc.
urls = { "Homepage" = "https://github.com/talwrii/yt-parallel", "Repository" = "https://github.com/talwrii/yt-parallel"}

# Define classifiers (standard tags for PyPI) <-- CORRECT LOCATION
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing",
    "Topic :: Multimedia :: Video",
    "Development Status :: 3 - Alpha",
]

# Define command-line entry points. <-- New table header separates it
[project.scripts]
yt-parallel = "yt_parallel.main:main"

[tool.setuptools.packages]
# Tell setuptools where to find the package directory.
find = {where = ["."]}
